# boring-math-pythagorean-triples

./: README.md  README.rst  pyproject.toml
src/bm/pythagorean_triples/: __init__.py  pythag3.py
src/bm/pythagorean_triples/cli/: __init__.py  pythag3.py
src/boring_math/pythagorean_triples/: pythag3.py
src/boring_math/pythagorean_triples/cli/: __init__.py  pythag3.py  pythag3_cli.py
