[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boring-math-pythagorean-triples"
version = "0.7.0"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
keywords = [
  "mathematics",
  "pythagorean",
  "triples",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "bm.integer-math >= 0.8.0",
  "pythonic-fp.circulararray >= 5.3.0",
  "pythonic-fp.fptools >= 5.0.0",
]
dynamic = ["description"]

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
]

[project.urls]
Changelog = "https://github.com/grscheller/boring-math-pythagorean-triples/blob/main/CHANGELOG.md"
Documentation = "https://grscheller.github.io/boring-math/pythagorean-triples/development/build/html/releases.html"
Homepage = "https://github.com/grscheller/boring-math/blob/main/README.md"
Source = "https://github.com/grscheller/boring-math-pythagorean-triples"

[project.scripts]
pythag3 = "bm.pythagorean_triples.cli.pythag3:pythag3_cli"

[tool.flit.module]
name = "boring_math.pythagorean_triples"

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
implicit_reexport = false
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
strict = true
report_progress = true

[tool.pytest.ini_options]
consider_namespace_packages = true
testpaths = ["tests/"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
ignore = ["E741"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
